# daemon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  daemon.cpp  exec.cpp
src/: daemon.cpp
src/lib/: exec.cpp  exec.hpp
src/lib/exec/: disable.cpp  start.cpp
